# CerealKiller

./: .gitignore  Action.cpp  ActionHandler.cpp  ActionHandler.h  ActionManager.cpp  ActionManager.h  Bones.cpp  Bones.h  CMakeLists.txt  Context.cpp  Context.h  Core.cpp  Core.h  Layer.cpp  Layer.h  README.md  RenderManager.cpp  RenderManager.h  ResourceManager.cpp  ResourceManager.h  Selection.cpp  Selection.h  TextureAtlas.cpp  TextureAtlas.h  Triangles.cpp  Triangles.h  fileFormats.txt  main.cpp
ActionHandler/: ActionHandler.cpp  ActionHandler.h  MoveHandler.cpp  MoveHandler.h  RotationHandler.h  ScaleHandler.h  TriangleCreationHandler.h
Actions/: Action.h  ActionManager.cpp  ActionManager.h  CreateTriangle.cpp  CreateTriangle.h  FillTriangle.h  MoveSelection.cpp  MoveSelection.h  RemoveSelection.h  RotateSelection.cpp  RotateSelection.h  ScaleSelection.cpp  ScaleSelection.h  SelectVertices.cpp  SelectVertices.h
CharacterEditor/: BoneLayer.cpp  BoneLayer.h  CharSelection.cpp  CharSelection.h  CharacterEditor.cpp  CharacterEditor.h
CharacterEditor/ActionHandler/: BoneCreationHandler.cpp  BoneCreationHandler.h  MoveBoneHandler.cpp  MoveBoneHandler.h  RotationBoneHandler.cpp  RotationBoneHandler.h  ScaleBoneHandler.cpp  ScaleBoneHandler.h
CharacterEditor/Actions/: CreateBone.cpp  CreateBone.h  MoveBoneSelection.cpp  MoveBoneSelection.h  RemoveBoneSelection.cpp  RemoveBoneSelection.h  RotateBoneSelection.cpp  RotateBoneSelection.h  ScaleBoneSelection.cpp  ScaleBoneSelection.h  SelectBoneVertices.cpp  SelectBoneVertices.h
MapEditor/: MapEditor.cpp  MapEditor.h
MapEditor/ActionHandler/: MoveHandler.h  RotationHandler.cpp  RotationHandler.h  ScaleHandler.cpp  ScaleHandler.h  TriangleCreationHandler.cpp  TriangleCreationHandler.h
MapEditor/Actions/: CreateTriangle.h  FillTriangle.cpp  FillTriangle.h  MoveSelection.cpp  MoveSelection.h  RemoveSelection.cpp  RemoveSelection.h  RotateSelection.cpp  RotateSelection.h  ScaleSelection.cpp  ScaleSelection.h  SelectVertices.h
Maps/: test.mxm
Math/: Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
Shader/: PointLineShader.cpp  PointLineShader.h  Shader.cpp  Shader.h  TriangleShader.cpp  TriangleShader.h  pointLine.frag  pointLine.vert  triangle.frag  triangle.vert
include/SDL2/: SDL_config.h
